# Buro

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  buro.db  debug_status.py  package-lock.json  pydantic_core-2.14.1-cp39-cp39-macosx_11_0_arm64.whl  pyproject.toml
.github/workflows/: e2e.yml
.venv_backup_1772174624/: pyvenv.cfg
buro/: main.py
buro/api/: __init__.py  analytics.py  auth.py  issues.py  projects.py  users.py
buro/core/: __init__.py  database.py
buro/models/: __init__.py  base.py  issue.py  project.py  user.py
buro/services/: analytics_service.py  auth_service.py  issue_service.py  notification_service.py  project_service.py  user_service.py
docs/agent-sessions/: 2026-03-15-vite-migration-session.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/board/: KanbanBoard.tsx  (+1 more)
frontend/src/hooks/: useQuery.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Analytics.tsx  Issues.tsx  Login.tsx  Projects.tsx  Users.tsx
frontend/src/stores/: appStore.ts
frontend/src/types/: api.ts
frontend/tests/e2e/: auth.spec.ts  board.spec.ts  issues.spec.ts  theme.spec.ts  users.spec.ts
scripts/: buro.db  create_tables.py  init_db.py  run-playwright.sh
tests/: conftest.py
tests/models/: test_issue_model.py
tests/services/: test_analytics_service.py  test_auth_and_notification_service.py  test_issue_service.py  test_project_service.py  test_user_service.py
(+8 files in other folders)
